
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-1.6.7 (24/08/2015)
===========================
Librairies:
- Ajout de PHPMailer (https://github.com/PHPMailer/PHPMailer)

AID:
- Possibilité de visualiser en popup les élèves d'un AID depuis Mes_listes.
- Possibilité d'effectuer un export CSV depuis Mes_listes_CSV.
- Possibilité d'effectuer une impression PDF des listes d'élèves.

Abs2:
- Possibilité d'associer automatiquement des saisies (saisir_groupe.php) à un traitement englobant.

Absence et remplacement de professeurs:
- Possibilité de ne pas afficher de case à cocher pour ne pas proposer de remplacer des enseignements qui ne correspondent pas à des groupes-classes.
- Possibilité d'autoriser les professeurs à refuser d'apparaître dans la liste des candidats potentiels pour effectuer un remplacement.

Bulletins:
- Possibilité de définir un autre préfixe que "Bulletin du " précédant le nom de période pour les bulletins.
- Ajout d'un droit PeutDonnerAccesBullAppPeriodeCloseScol pour pouvoir restreindre l'accès scolarité à l'autorisation exceptionnelle de saisie/correction d'appréciations des bulletins.
- Graphes: Possibilité d'afficher sur une seule page les graphes de tous les élèves d'une classe
  (pour les imprimer par exemple).
- Graphes: Possibilité d'afficher les notes du carnet de notes en infobulle.
- Possibilité d'autoriser le Professeur Principal à valider les corrections d'appréciations proposées par ses collègues.

Cahiers de textes (2):
- Avec l'archivage des CDT de cette version de Gepi, possibilité de coller dans les notices CDT2
  les sélections faites dans les archives CDT (archives de version>=1.6.7)

Discipline:
- Ajout d'un dispositif pour pointer les menus manquements (Oubli de matériel, Travail non fait, Comportement,...)

Publipostage OOo:
- Possibilité de générer (d'un coup) un fichier par classe ou enseignement sélectionné et de zipper l'ensemble.

Alertes: